# QtDeployMaster

./: .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DeployMaster.cpp  DeployMaster.h  DeployMaster.qrc  DeployMaster.rc  DeployMaster.sln  DeployMaster.ui  DeployMaster.vcxproj  DeployMaster.vcxproj.filters  DiagnosticClient.cpp  DiagnosticClient.h  DropListWidget.cpp  DropListWidget.h  FileDeploy.cpp  FileDeploy.h  FtpManager.cpp  FtpManager.h  FtpRemoteItem.h  LICENSE  LogQueryTab.cpp  LogQueryTab.h  ModbusCluster.cpp  ModbusCluster.h  OpcUaClient.cpp  OpcUaClient.h  README.md  RELEASE_NOTES.md  ROADMAP.md  TelnetClient.cpp  TelnetClient.h  TelnetDeploy.cpp  TelnetDeploy.h  WebSocketClient.cpp  WebSocketClient.h  build.bat  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: msbuild.yml
.superpowers/sdd/: task-3-report.md
build_release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DeployMaster.sln  DeployMaster.vcxproj  DeployMaster.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lwcomm.vcxproj  lwcomm.vcxproj.filters  lwcommunicate.vcxproj  lwcommunicate.vcxproj.filters  lwevent.vcxproj  lwevent.vcxproj.filters  lwlog.vcxproj  lwlog.vcxproj.filters  lwmsgq.vcxproj  lwmsgq.vcxproj.filters  lwserverbase.vcxproj  lwserverbase.vcxproj.filters  nanopb.vcxproj  nanopb.vcxproj.filters  tinyxml2.vcxproj  tinyxml2.vcxproj.filters
build_release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_release/DeployMaster_autogen/: mocs_compilation_Release.cpp
build_release/DeployMaster_autogen/include_Release/: ui_DeployMaster.h  ui_tab_logquery.h  ui_tab_modbus_cluster_test.h  ui_tab_opcua_client.h  ui_tab_telnet.h  ui_tab_websocket.h
build_release/DeployMaster_autogen/include_Release/4JZQW4BGRL/: moc_FtpDeployWidget.cpp  moc_FtpDeployWidget.cpp.d
build_release/DeployMaster_autogen/include_Release/EWIEGA46WW/: moc_DeployMaster.cpp  moc_DeployMaster.cpp.d  moc_DropListWidget.cpp  moc_DropListWidget.cpp.d  moc_LogQueryTab.cpp  moc_LogQueryTab.cpp.d  moc_ModbusCluster.cpp  moc_ModbusCluster.cpp.d  moc_OpcUaClient.cpp  moc_OpcUaClient.cpp.d  (+6 more)
doc/: Qt上位机诊断工具需求规格说明书.md  qt上位机与PLC诊断服务通信技术规约.md
docs/: ROADMAP.md  api-reference.md  architecture.md  build-guide.md  debugging-guide.md  security.md  user-guide.md  运营流程.md
docs/01-方案设计/: 2026-06-14-重构设计.md  2026-06-19-UI重设计.md  2026-06-19-紧凑布局设计.md  2026-07-04-工具框架设计.md  2026-07-05-DeviceForge命名设计.md  2026-07-08-网络中继设计.md  2026-07-09-产品化打磨设计.md  2026-07-10-OPC-UA客户端设计.md  2026-07-10-SSH适配器设计.md  2026-07-10-组播录制回放设计.md  2026-07-14-在线更新设计.md
docs/02-实施计划/: 2026-06-14-重构计划.md  2026-06-19-UI重设计计划.md  2026-07-04-工具框架计划.md  2026-07-05-FTP部署改进计划.md  2026-07-09-产品化打磨.md  2026-07-10-OPC-UA客户端.md  2026-07-10-SSH适配器.md  2026-07-10-组播录制回放.md
docs/03-架构与接口/: 接口参考.md  架构设计.md
docs/04-构建与部署/: Qt版本一致性说明.md  安全说明.md  构建指南.md  调试指南.md
docs/articles/: 2026-07-09-透明中继调试工具设计-发布版.md  2026-07-09-透明中继调试工具设计.md  2026-07-13-opc-ua-open62541-qt-集成陷阱.md  2026-07-17-opc-ua-open62541-qt-集成5陷阱-发布版.md
docs/superpowers/plans/: 2026-06-14-ui-modernization.md  2026-07-04-tool-framework-plan.md  2026-07-05-ftp-deploy-improvement-plan.md  2026-07-08-net-relay-record-replay.md  2026-07-09-productization-polish.md  2026-07-10-multicast-record-replay.md  2026-07-10-opc-ua-client.md  2026-07-10-ssh-adapter.md  2026-07-14-online-update-plan.md  2026-07-21-config-store.md
docs/superpowers/specs/: 2026-06-14-refactor-design.md  2026-06-14-ui-modernization-design.md  2026-07-04-tool-framework-design.md  2026-07-05-ftp-deploy-improvement-design.md  2026-07-20-opcua-client-ui-redesign-design.md  2026-07-21-config-store-design.md
lib/: libcurl_imp.lib  libssh2.lib  lwcomm.lib  lwcommunicate.lib  lwevent.lib  lwlog.lib  lwmsgq.lib  lwserverbase.lib  nanopb.lib  tinyxml2.lib
lib/cmake/CURL/: CURLConfig.cmake  CURLConfigVersion.cmake
lib/pkgconfig/: libcurl.pc
src/adapter/: FtpAdapter.cpp  FtpAdapter.h  IProtocolAdapter.h  OpcUaAdapter.cpp  OpcUaAdapter.h  ProtocolCapability.h  ProtocolRegistry.cpp  ProtocolRegistry.h  SshAdapter.cpp  SshAdapter.h  TelnetAdapter.cpp  TelnetAdapter.h
src/config/: ConfigStore.cpp  DpapiCrypto.cpp  SettingsDialog.cpp  SettingsDialog.h
src/framework/: AppState.cpp  AppState.h  ConnectionPool.cpp  ConnectionPool.h  DeviceInfo.h  EventBus.cpp  EventBus.h  ManifestParser.cpp  ManifestParser.h  ToolBackend.h  ToolHost.cpp  ToolHost.h  ToolRegistry.cpp  ToolRegistry.h  ToolWidget.cpp  ToolWidget.h
src/logging/: LogBridge.cpp  LogBridge.h
src/model/: FtpManager.cpp  FtpManager.h
src/presenter/: FtpPresenter.cpp  FtpPresenter.h  ModbusPresenter.cpp  ModbusPresenter.h
src/tools/FtpDeployTool/: FtpDeployBackend.cpp  FtpDeployBackend.h  FtpDeployWidget.cpp  FtpDeployWidget.h
src/tools/ModbusTool/: ModbusBackend.cpp  ModbusBackend.h  ModbusWidget.cpp  ModbusWidget.h
src/tools/NetRelayTool/: NetRelayBackend.cpp  NetRelayBackend.h  NetRelayTypes.h  NetRelayWidget.cpp  NetRelayWidget.h  RelayPlayer.cpp  RelayPlayer.h  RelayRecorder.cpp  RelayRecorder.h  RelayRecording.cpp  RelayRecording.h
src/tools/OpcUaClientTool/: OpcUaClientBackend.cpp  OpcUaClientBackend.h  OpcUaClientWidget.cpp  OpcUaClientWidget.h
src/tools/TelnetTool/: TelnetBackend.cpp  TelnetBackend.h  TelnetWidget.cpp  TelnetWidget.h
src/tools/WebSocketTool/: WebSocketBackend.cpp  WebSocketBackend.h  WebSocketWidget.cpp  WebSocketWidget.h
src/ui/: DeviceBusWidget.cpp  DeviceBusWidget.h
src/updater/: UpdateChecker.cpp  UpdateChecker.h  UpdateDialog.cpp  UpdateDialog.h  UpdateTypes.h  UpdaterMain.cpp
src/utils/: DeployEvent.h  FormatUtils.h
tests/: CMakeLists.txt  tst_updatechecker.cpp
tests/NetRelayTool/: tst_nrec.cpp
tests/opcua_encode/: tst_opcua_encode.c  tst_opcua_loopback.cpp
(+8 files in other folders)
